--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,7 +78,7 @@ jobs:
         working-directory: angle
         shell: pwsh
         run: |
-          gn gen $env:BuildDir --args='target_cpu="x86"'
+          gn gen $env:BuildDir
           autoninja -C $env:BuildDir libANGLE_static libGLESv2_static
 
       - name: Package ANGLE
