--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -7,7 +7,10 @@ runs:
     - uses: TheMrMilchmann/setup-msvc-dev@v3
       with:
         arch: x64
-
+    - name: Install Windows SDK Debugging Tools
+      shell: pwsh
+      run: |
+        choco install windows-sdk-debuggers --version 10.0.26100.0 -y
     - name: Install uv
       uses: astral-sh/setup-uv@v6
 
