--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -7,6 +7,7 @@ runs:
     - uses: TheMrMilchmann/setup-msvc-dev@v3
       with:
         arch: amd64_x86
+        sdk: 10.0.26100.0
     - name: Install uv
       uses: astral-sh/setup-uv@v6
 
