--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -6,7 +6,7 @@ runs:
   steps:
     - uses: TheMrMilchmann/setup-msvc-dev@v3
       with:
-        arch: amd64_x86
+        arch: x86
         sdk: 10.0.26100.0
     - name: Install uv
       uses: astral-sh/setup-uv@v6
