--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -19,8 +19,8 @@ runs:
         # We use --add to ensure the component is added.
         # --passive makes the installation process silent.
         # --norestart prevents a system restart after installation.
-        .\vs_buildtools.exe --quiet --wait --add Microsoft.VisualStudio.Component.Windows11SDK.26100 --passive --norestart
-        .\vs_buildtools.exe --quiet --wait --add Microsoft.VisualStudio.Component.DebuggingTools.Windows --passive --norestart
+        .\vs_buildtools.exe --quiet --wait --add Microsoft.VisualStudio.Component.Windows11SDK.26100;includeRecommended;includeOptional --passive --norestart
+        .\vs_buildtools.exe --quiet --wait --add Microsoft.VisualStudio.Component.DebuggingTools.Windows;includeRecommended;includeOptional --passive --norestart
       shell: powershell
     - name: Verify SDK Installation (Optional)
       run: |
